taken off the API key

--- a/index.html
+++ b/index.html
@@ -31,9 +31,17 @@
         </form>
       </div>
     </div>
+    <div class="card w-60">
+      <div class="card-body">
+        <h5 class="card-title">Current City</h5>
+        <p class="card-text">Temperature--------------------------------------------------------------</p>
+        <p class="card-text">Wing Speed---------------------------------------------------------------</p>
+        <p class="card-text">Humidity-----------------------------------------------------------------</p>
+      </div>
+    </div>
 
   </main>
-
+  <script src="key.js"></script>
   <script src="assets/script.js"></script>
 </body>
 
