--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="./assets/style.css" />
   <title>My Weather Forecast App</title>
@@ -19,18 +19,20 @@
   </header>
 
 
-  <main class="flex-row justify-space-between">
+  <main class="flex-row">
     <div class="col-12 col-md-4">
 
-      <div class="card" id="appendSearch">
+      <div class="card-form" id="appendSearch">
         <h3 class="card-header text-uppercase">Search By City</h3>
         <form id="user-form" class="card-body">
-          <label class="form-label" for="username">CityName</label>
-          <input name="cityname" id="cityName" type="text" autofocus="true" class="form-input" />
+          <label class="form-label" for="CityName">CityName</label>
+          <input name="cityname" id="cityName" type="text" autofocus="true" class="form-input" placeholder="Please Enter City Here" />
           <button type="submit" class="btn" id="searchButton">Get Forecast</button>
         </form>
+        
       </div>
     </div>
+    
 
   </main>
   <script src="key.js"></script>
